--- a/index.html
+++ b/index.html
@@ -156,7 +156,11 @@
 			<div class ="skills-box">
 				<i class='bx bxs-data' ></i>
 				<h3>Bases de Datos</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>En los  modelo de ML, es común que se realicen procesos de preprocesamiento y transformación de datos. Las bases de datos van a facilitar estos procesos al permitir 
+					resalizar esasconsultas complejas que extraen, filtran y agregan información de forma eficiente. Operaciones como la normalización, la eliminación de valores atípicos y 
+					la transformación de variables se benefician de la estructura que ofrecen los repositorios de datos. Además, muchos sistemas de ML están diseñados para 
+					conectarse directamente a las bases de datos, permitiendo pipelines de datos automatizados que optimizan el flujo de trabajo entre la extracción de datos 
+					y el entrenamiento del modelo.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 		
