--- a/index.html
+++ b/index.html
@@ -156,18 +156,20 @@
 			<div class ="skills-box">
 				<i class='bx bxs-data' ></i>
 				<h3>Bases de Datos</h3>
-				<p>En los  modelo de ML, es común que se realicen procesos de preprocesamiento y transformación de datos. Las bases de datos van a facilitar estos procesos al permitir 
-					resalizar esasconsultas complejas que extraen, filtran y agregan información de forma eficiente. Operaciones como la normalización, la eliminación de valores atípicos y 
-					la transformación de variables se benefician de la estructura que ofrecen los repositorios de datos. Además, muchos sistemas de ML están diseñados para 
-					conectarse directamente a las bases de datos, permitiendo pipelines de datos automatizados que optimizan el flujo de trabajo entre la extracción de datos 
-					y el entrenamiento del modelo.</p>
+				<p>En los  modelo de ML, es común que se realicen procesos de preprocesamiento y transformación de datos. Facilitoel procesamiento de las bases de datos al permitir 
+					resalizar consultas complejas que extraen, filtran y agregan información de forma eficiente. Opero con la normalización, la eliminación de valores atípicos y con 
+					la transformación de variables, beneficiando de la estructuras que ofrecen los repositorios de datos. Además, a través de herramientas diseñados realizo la
+					conección directa e indirecta a las bases de datos, permitiendo pipelines o canalización de datos automatizados que optimizan el flujo de trabajo entre los procesos ETL 
+					y su posterior entrenamiento.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 		
 			<div class ="skills-box">
 				<i class='bx bxl-python' ></i>
 				<h3>Machine Learning</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>Elaboro modelos de ML basados en el entrenamiento, evaluación y validación de resultados, lo que me permite almacenarlos en conjuntos de entrenamiento, validación y prueba, 
+					facilitando la comparación de resultados y la realización de experimentos reproducibles, para verificar si es necesario la implementación de técnicas de validación cruzada, 
+					que aseguran la generación del modelo sin llegar al sobreajuste u <b>overfitting</b> .</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 			
