--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
 			<div class ="skills-box">
 				<i class='bx bxs-data' ></i>
 				<h3>Bases de Datos</h3>
-				<p>En los  modelo de ML, es común que se realicen procesos de preprocesamiento y transformación de datos. Facilitoel procesamiento de las bases de datos al permitir 
-					resalizar consultas complejas que extraen, filtran y agregan información de forma eficiente. Opero con la normalización, la eliminación de valores atípicos y con 
-					la transformación de variables, beneficiando de la estructuras que ofrecen los repositorios de datos. Además, a través de herramientas diseñados realizo la
-					conección directa e indirecta a las bases de datos, permitiendo pipelines o canalización de datos automatizados que optimizan el flujo de trabajo entre los procesos ETL 
+				<p>En los  modelo de ML, es común que se realicen procesos de preprocesamiento y transformación de datos. Facilito el procesamiento de las bases de datos al permitir 
+					realizar consultas complejas que extraen, filtran y agregan información de forma eficiente. Opero con la normalización, la eliminación de valores atípicos y con 
+					la transformación de variables, beneficiando las estructuras que ofrecen los repositorios de datos. Además, a través de herramientas diseñadas realizo la
+					conección directa e indirecta a las bases de datos, permitiendo <em>pipelines o canalización</em> de datos automatizados que optimizan el flujo de trabajo entre los procesos ETL 
 					y su posterior entrenamiento.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
@@ -168,15 +168,19 @@
 				<i class='bx bxl-python' ></i>
 				<h3>Machine Learning</h3>
 				<p>Elaboro modelos de ML basados en el entrenamiento, evaluación y validación de resultados, lo que me permite almacenarlos en conjuntos de entrenamiento, validación y prueba, 
-					facilitando la comparación de resultados y la realización de experimentos reproducibles, para verificar si es necesario la implementación de técnicas de validación cruzada, 
-					que aseguran la generación del modelo sin llegar al sobreajuste u <b>overfitting</b> .</p>
+					facilitando la comparación de resultados y la realización de experimentos reproducibles, con la verficación si es necesario la implementación de técnicas de validación cruzada, 
+					que puedan asegurar la generación del modelo sin llegar al sobreajuste u <b>overfitting</b>.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 			
 			<div class ="skills-box">
 				<i class='bx bxl-codepen'></i>
 				<h3>Deep Learning</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>Utlizo como herramienta el lenguaje natural o <b>NPL</b> para elaborar prototipos que puedan ser sacados a producción. Para
+					las tareas de preparación de datos me apoyo con librerías como Pandas y NumPy y para el preprocesamiento trabajo con
+					la librería NLTK. El framework para dichas tareas son Tensorflow y su API Keras. Para garantizar patrones realizo la
+					validación cruzada y divido datos de prueba y entrenamiento, a través de curvas ROC y matrces de confusión, siempre y cuando 
+					el problema así lo solicite.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 			
