--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 				<i class='bx bxs-data' ></i>
 				<h3>Bases de Datos</h3>
 				<p>En los  modelo de ML, es común que se realicen procesos de preprocesamiento y transformación de datos. Facilito el procesamiento de las bases de datos al permitir 
-					realizar consultas complejas que extraen, filtran y agregan información de forma eficiente. Opero con la normalización, la eliminación de valores atípicos y con 
+					realizar consultas complejas que extraigan, filtren y agreguen información de forma eficiente. Opero con la normalización, la eliminación de valores atípicos y con 
 					la transformación de variables, beneficiando las estructuras que ofrecen los repositorios de datos. Además, a través de herramientas diseñadas realizo la
 					conección directa e indirecta a las bases de datos, permitiendo <em>pipelines o canalización</em> de datos automatizados que optimizan el flujo de trabajo entre los procesos ETL 
 					y su posterior entrenamiento.</p>
@@ -169,7 +169,8 @@
 				<h3>Machine Learning</h3>
 				<p>Elaboro modelos de ML basados en el entrenamiento, evaluación y validación de resultados, lo que me permite almacenarlos en conjuntos de entrenamiento, validación y prueba, 
 					facilitando la comparación de resultados y la realización de experimentos reproducibles, con la verficación si es necesario la implementación de técnicas de validación cruzada, 
-					que puedan asegurar la generación del modelo sin llegar al sobreajuste u <b>overfitting</b>.</p>
+					que puedan asegurar la generación del modelo sin llegar al sobreajuste u <b>overfitting</b>. Para modelos complejos como
+					pueden ser datos no legibles o No estructurados me apoyo con el etiquetado para poder almacenarlos eficientemente</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 			
@@ -177,10 +178,10 @@
 				<i class='bx bxl-codepen'></i>
 				<h3>Deep Learning</h3>
 				<p>Utlizo como herramienta el lenguaje natural o <b>NPL</b> para elaborar prototipos que puedan ser sacados a producción. Para
-					las tareas de preparación de datos me apoyo con librerías como Pandas y NumPy y para el preprocesamiento trabajo con
-					la librería NLTK. El framework para dichas tareas son Tensorflow y su API Keras. Para garantizar patrones realizo la
-					validación cruzada y divido datos de prueba y entrenamiento, a través de curvas ROC y matrces de confusión, siempre y cuando 
-					el problema así lo solicite.</p>
+					las tareas de preparación de datos me apoyo con librerías como <b>Pandas y NumPy</b> y para el preprocesamiento trabajo con
+					la librería NLTK en Python. El framework que utilizo para dichas tareas son Tensorflow y su API Keras. Para garantizar patrones realizo la
+					validación cruzada y dividir datos de prueba y entrenamiento, practico la monitorización, a través de curvas ROC, MSE o error 
+					cuadrático medio, matrces de confusión y precisión, siempre y cuando el problema así lo solicite.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 			
