--- a/index.html
+++ b/index.html
@@ -156,8 +156,7 @@
 			<div class ="skills-box">
 				<i class='bx bxs-data' ></i>
 				<h3>Bases de Datos</h3>
-				<p>En los  modelo de ML, es común que se realicen procesos de preprocesamiento y transformación de datos. Facilito el procesamiento de las bases de datos al permitir 
-					realizar consultas complejas que extraigan, filtren y agreguen información de forma eficiente. Opero con la normalización, la eliminación de valores atípicos y con 
+				<p>Facilito el procesamiento de las bases de datos al permitir realizar consultas complejas que extraigan, filtren y agreguen información de forma eficiente. Opero con la normalización, la eliminación de valores atípicos y con 
 					la transformación de variables, beneficiando las estructuras que ofrecen los repositorios de datos. Además, a través de herramientas diseñadas realizo la
 					conección directa e indirecta a las bases de datos, permitiendo <em>pipelines o canalización</em> de datos automatizados que optimizan el flujo de trabajo entre los procesos ETL 
 					y su posterior entrenamiento.</p>
@@ -167,7 +166,7 @@
 			<div class ="skills-box">
 				<i class='bx bxl-python' ></i>
 				<h3>Machine Learning</h3>
-				<p>Elaboro modelos de ML basados en el entrenamiento, evaluación y validación de resultados, lo que me permite almacenarlos en conjuntos de entrenamiento, validación y prueba, 
+				<p>Elaboro modelos de Machine Learning basados en el entrenamiento, evaluando y validando los resultados, lo que me permite almacenarlos en conjuntos de entrenamiento, validación y prueba, 
 					facilitando la comparación de resultados y la realización de experimentos reproducibles, con la verficación si es necesario la implementación de técnicas de validación cruzada, 
 					que puedan asegurar la generación del modelo sin llegar al sobreajuste u <b>overfitting</b>. Para modelos complejos como
 					pueden ser datos no legibles o No estructurados me apoyo con el etiquetado para poder almacenarlos eficientemente</p>
