--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
 				<h3>Machine Learning</h3>
 				<p>Elaboro modelos de Machine Learning basados en el entrenamiento, evaluando y validando los resultados, lo que me permite almacenarlos en conjuntos de entrenamiento, validación y prueba, 
 					facilitando la comparación de resultados y la realización de experimentos reproducibles, con la verficación si es necesario la implementación de técnicas de validación cruzada, 
-					que puedan asegurar la generación del modelo sin llegar al sobreajuste u <b>overfitting</b>. Para modelos complejos como
-					pueden ser datos no legibles o No estructurados me apoyo con el etiquetado para poder almacenarlos eficientemente</p>
+					que puedan asegurar la generación del modelo sin llegar al sobreajuste u <b>overfitting</b>. Para modelos complejos como pueden ser datos no legibles o No estructurados me apoyo con
+					el etiquetado para poder almacenarlos eficientemente.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 			
@@ -179,7 +179,7 @@
 				<p>Utlizo como herramienta el lenguaje natural o <b>NPL</b> para elaborar prototipos que puedan ser sacados a producción. Para
 					las tareas de preparación de datos me apoyo con librerías como <b>Pandas y NumPy</b> y para el preprocesamiento trabajo con
 					la librería NLTK en Python. El framework que utilizo para dichas tareas son Tensorflow y su API Keras. Para garantizar patrones realizo la
-					validación cruzada y dividir datos de prueba y entrenamiento, practico la monitorización, a través de curvas ROC, MSE o error 
+					validación cruzada y división en datos de prueba y entrenamiento, practicando la monitorización, a través de curvas ROC, MSE o error 
 					cuadrático medio, matrces de confusión y precisión, siempre y cuando el problema así lo solicite.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
@@ -187,21 +187,29 @@
 			<div class ="skills-box">
 				<i class='bx bxs-notepad'></i>
 				<h3>Datos Estructurados</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>Este tipo de datos los trabajo con RDD, a través de la distribución computacional, ya que me permiten trabajr de una manera rápida y eficiente 
+					al poder escalar repositorios de grandes capacidades de almacenamiento. Me baso en cuadernos Jupyter y los principales Kernels 
+					para ciencia y procesamiento de datos. Este tipo de sistemas los trabajo con Spark para Scala o PySpark para Python, dejando los datos listos para trabajar 
+					con Apache Hadoop y su posterior conexión vía HDFS.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 			
 			<div class ="skills-box">
 				<i class='bx bxs-cloud'></i>
 				<h3>Data Cloud</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>La aplicación de gestiones cloud lo aporto de conocimientos desde una arquitectura con Azure, pudiendo gestionar suscripciones, controles de acceso, gobernanza y
+				        conectividad con máquinas vurtuales monitorizando tráfico, redes y almacenes. Mis conocimientos con Azure son fundamentales
+					para soportar arquitecturas e infraestructuras para el almacenamiento al soportar bases esenciales como Arquitecto de bases de datos. 
+					La modularidad de arquitecturas de bases de dayos con Azure se fundamentan bajo conocimientos sólidos y prácticos puestos en desarrollo
+					y producción.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 			
 			<div class ="skills-box">
 				<i class='bx bxs-bar-chart-alt-2'></i>
 				<h3>Business Intelligence</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>La creación de visualizaciones y análisis las realizo a través de expresiones de los datoflow o flujos de datos y los soporto con herramientas de inteligencia 
+					de negocios. Partiicipo en análisis complejos con DAX y sus funciones categóricas para medidas y columnas calculadas. </p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 		</div>
@@ -219,7 +227,7 @@
 			</div>
 			<div>
 				<h3>Dirección Residencia 🏠</h3>
-				<p>C/ Alta de Mar, 25<br>Almuñecar, 18690</p>
+				<p>C/ Alta de Mar<br>Almuñecar, 18690</p>
 			</div>
 			<div>
 				<h3>Dirección de e-mail ✉️</h3>
