--- a/index.html
+++ b/index.html
@@ -124,13 +124,18 @@
 			<h3>2017 – 2017 Buzinger S.L Programador de Sistemas Informáticos. – <span>Prácticas</span></h3>
 			<ul>
 				<li>Uso de Spring Boot como lenguaje de programación.</li>
-				<li>Desarrollo de un sistema informático para gestionar un servicio en línea sobre procesos de compras. Evaluación de la API de Zoho para el servicio en línea.</li>
+				<li>Desarrollo de un sistema informático para gestionar un servicio en línea sobre procesos de compras.</li>
+				<li>Evaluación de la API de Zoho para el servicio en línea.</li>
 			</ul>	
 			<br>
 			<h3>2011 – 2015 PepsiCo Alimentos Venezuela S.C.A. – <span>Ingeniero Agrónomo</span></h3>
 			<ul>
-				<li>Uso de Spring Boot como lenguaje de programación.</li>
-				<li>Desarrollo de un sistema informático para gestionar un servicio en línea sobre procesos de compras. Evaluación de la API de Zoho para el servicio en línea.</li>
+				<li>Operador de BBDD para la toma de decisiones y adquisición de materias primas.</li>
+				<li>Desarrollo de KPIs estratégico con cuadros de mando mediante normalización y modelado de bbdd.</i>
+				<li>Arquitectura y automatización de informes.</li>
+				<li>Gestión de agroquímicos, leyes, clima y desarrollo de tierras para el programa de sostenibilidad.</li>
+				<li>Evaluación de previsiones para la producción de materias primas.</li>
+				<li>Elaboración de Dashboard. Mejora del Scorecard y hoja de campo.</li>
 			</ul>
 			<br>
 			<h3>2010 – 2011 Kimberly Clark Venezuela C.A. – <span>Ingeniero de compras</span></h3>
