--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		<div class = "about-content">
 			<h2 class = "heading">Sobre <span>Mi</span></h2>
 			<h3>Ingeniero Agrónomo</h3>
-			<p>Hola, soy Eduardo, trabajando desde hace muchos años con datos. Mi objetivo es aportar resultados en el menor tiempo posible,
+			<p>Hola, trabajo desde hace muchos años con datos. Mi objetivo es aportar resultados en el menor tiempo posible,
 			poseo conocimientos y habilidades informáticas, pero si no lo se, te aseguro que lo voy averiguar. Mi metodología es simple, 
 			pero muy sólida partiendo desde como trabajar hojas de cálculo con MS Excel, usando análisis funcional para crear tablas y gráficos dinámicos, 
 			para obtener datos complejos. Cada proceso y skillset son únicos, específicos y van a depender de cada responsable. 
