--- a/index.html
+++ b/index.html
@@ -183,30 +183,29 @@
 				<h3>Deep Learning</h3>
 				<p>Utlizo como herramienta el lenguaje natural o <b>NPL</b> para elaborar prototipos que puedan ser sacados a producción. Para
 					las tareas de preparación de datos me apoyo con librerías como <b>Pandas y NumPy</b> y para el preprocesamiento trabajo con
-					la librería NLTK en Python. El framework que utilizo para dichas tareas son Tensorflow y su API Keras. Para garantizar patrones realizo la
-					validación cruzada y división en datos de prueba y entrenamiento, practicando la monitorización, a través de curvas ROC, MSE o error 
-					cuadrático medio, matrces de confusión y precisión, siempre y cuando el problema así lo solicite.</p>
+					la librería NLTK en Python. El framework que utilizo para dichas tareas son <b>Tensorflow y su API Keras</b>. Para garantizar patrones realizo la
+					validación cruzada y división en datos de prueba y entrenamiento, practicando la monitorización, a través de <b>curvas ROC, MSE o error 
+					cuadrático medio, matrices de confusión y precisión</b>, siempre y cuando el problema así lo solicite.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 			
 			<div class ="skills-box">
 				<i class='bx bxs-notepad'></i>
 				<h3>Datos Estructurados</h3>
-				<p>Este tipo de datos los trabajo con RDD, a través de la distribución computacional, ya que me permiten trabajr de una manera rápida y eficiente 
-					al poder escalar repositorios de grandes capacidades de almacenamiento. Me baso en cuadernos Jupyter y los principales Kernels 
-					para ciencia y procesamiento de datos. Este tipo de sistemas los trabajo con Spark para Scala o PySpark para Python, dejando los datos listos para trabajar 
-					con Apache Hadoop y su posterior conexión vía HDFS.</p>
+				<p>Ya sea que los datos provengan de fuentes como repositorios centralizados o externos este tipo de datos los trabajo con RDD, a través de la distribución 
+					computacional, ya que me permiten trabajr de manera rápida y eficiente al poder escalar repositorios a través de sus diferentes etapas àra grandes capacidades 
+					de almacenamiento. Me baso en cuadernos Jupyter y los principales Kernels para ciencia y procesamiento de datos. Este tipo de sistemas los trabajo con <em>Spark para 
+					Scala o PySpark para Python</em>, dejando los datos listos para trabajar con <b>Apache Hadoop</b> y su posterior conexión vía HDFS.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 			
 			<div class ="skills-box">
 				<i class='bx bxs-cloud'></i>
 				<h3>Data Cloud</h3>
-				<p>La aplicación de gestiones cloud lo aporto de conocimientos desde una arquitectura con Azure, pudiendo gestionar suscripciones, controles de acceso, gobernanza y
+				<p>La aplicación de gestiones cloud lo aporto de conocimientos desde una arquitectura con <em>Azure</em>, pudiendo gestionar suscripciones, controles de acceso, gobernanza y
 				        conectividad con máquinas vurtuales monitorizando tráfico, redes y almacenes. Mis conocimientos con Azure son fundamentales
 					para soportar arquitecturas e infraestructuras para el almacenamiento al soportar bases esenciales como Arquitecto de bases de datos. 
-					La modularidad de arquitecturas de bases de dayos con Azure se fundamentan bajo conocimientos sólidos y prácticos puestos en desarrollo
-					y producción.</p>
+					La modularidad de arquitecturas de bases de dayos con Azure se fundamentan bajo conocimientos sólidos, prácticos, bajo licensias y puestos en desarrollo.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 			
@@ -214,7 +213,8 @@
 				<i class='bx bxs-bar-chart-alt-2'></i>
 				<h3>Business Intelligence</h3>
 				<p>La creación de visualizaciones y análisis las realizo a través de expresiones de los datoflow o flujos de datos y los soporto con herramientas de inteligencia 
-					de negocios. Partiicipo en análisis complejos con DAX y sus funciones categóricas para medidas y columnas calculadas. </p>
+					de negocios. Partiicipo en análisis complejos con DAX y sus funciones categóricas para medidas y columnas calculadas. La incorporación de esta herramienta 
+					gráfica con el almacén lo gestiono con DirectQuery a través de conexión de importaciones robustas por lotes.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 		</div>
