--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 				<h3>Business Intelligence</h3>
 				<p>La creación de visualizaciones y análisis las realizo a través de expresiones de los datoflow o flujos de datos y los soporto con herramientas de inteligencia 
 					de negocios. Partiicipo en análisis complejos con DAX y sus funciones categóricas para medidas y columnas calculadas. El flujo de datos de esta versatil herramienta 
-					gráfica, con el almacén lo gestiono con <b>DirectQuery</b>b> a través de conexión de importaciones robustas por lotes. La creación de estas conexiones con la arquitectura 
+					gráfica, con el almacén lo gestiono con <b>DirectQuery</b> a través de conexión de importaciones robustas por lotes. La creación de estas conexiones con la arquitectura 
 					de <em>Business Intelligence</em> con <b>PowerBI</b> van a permitir crear las dependencias para el tipo de análisis, sincronozación y orquestación de las fuentes.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
