--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 				<h3>Bases de Datos</h3>
 				<p>Facilito el procesamiento de las bases de datos al permitir realizar consultas complejas que extraigan, filtren y agreguen información de forma eficiente. Opero con la normalización, la eliminación de valores atípicos y con 
 					la transformación de variables, beneficiando las estructuras que ofrecen los repositorios de datos. Además, a través de herramientas diseñadas realizo la
-					conección directa e indirecta a las bases de datos, permitiendo <em>pipelines o canalización</em> de datos automatizados que optimizan el flujo de trabajo entre los procesos ETL 
+					conexión directa e indirecta a las bases de datos, permitiendo <em>pipelines o canalizaciones</em> de datos automatizados que optimizan el flujo de trabajo entre los procesos ETL 
 					y su posterior entrenamiento.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
@@ -172,7 +172,7 @@
 				<i class='bx bxl-python' ></i>
 				<h3>Machine Learning</h3>
 				<p>Elaboro modelos de Machine Learning basados en el entrenamiento, evaluando y validando los resultados, lo que me permite almacenarlos en conjuntos de entrenamiento, validación y prueba, 
-					facilitando la comparación de resultados y la realización de experimentos reproducibles, con la verficación si es necesario la implementación de técnicas de validación cruzada, 
+					facilitando la comparación de resultados y la realización de experimentos reproducibles, con la verificación si es necesaria realizo la implementación de técnicas de validación cruzada, 
 					que puedan asegurar la generación del modelo sin llegar al sobreajuste u <b>overfitting</b>. Para modelos complejos como pueden ser datos no legibles o No estructurados me apoyo con
 					el etiquetado para poder almacenarlos eficientemente.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
@@ -193,7 +193,7 @@
 				<i class='bx bxs-notepad'></i>
 				<h3>Datos Estructurados</h3>
 				<p>Ya sea que los datos provengan de fuentes como repositorios centralizados o externos este tipo de datos los trabajo con RDD, a través de la distribución 
-					computacional, ya que me permiten trabajr de manera rápida y eficiente al poder escalar repositorios a través de sus diferentes etapas àra grandes capacidades 
+					computacional, ya que me permiten trabajr de manera rápida y eficiente al poder escalar repositorios a través de sus diferentes etapas para grandes capacidades 
 					de almacenamiento. Me baso en cuadernos Jupyter y los principales Kernels para ciencia y procesamiento de datos. Este tipo de sistemas los trabajo con <em>Spark para 
 					Scala o PySpark para Python</em>, dejando los datos listos para trabajar con <b>Apache Hadoop</b> y su posterior conexión vía HDFS.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
@@ -204,8 +204,8 @@
 				<h3>Data Cloud</h3>
 				<p>La aplicación de gestiones cloud lo aporto de conocimientos desde una arquitectura con <em>Azure</em>, pudiendo gestionar suscripciones, controles de acceso, gobernanza y
 				        conectividad con máquinas vurtuales monitorizando tráfico, redes y almacenes. Mis conocimientos con Azure son fundamentales
-					para soportar arquitecturas e infraestructuras para el almacenamiento al soportar bases esenciales como Arquitecto de bases de datos. 
-					La modularidad de arquitecturas de bases de dayos con Azure se fundamentan bajo conocimientos sólidos, prácticos, bajo licensias y puestos en desarrollo.</p>
+					para soportar arquitecturas e infraestructuras en almacenes al soportar bases esenciales como Arquitecto de bases de datos. 
+					La modularidad de arquitecturas de bases de datos con Azure se fundamentan bajo conocimientos sólidos, prácticos, bajo licensias y puestos en desarrollo.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 			
