--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			<br>	
 			<h3>2019 – 2019 TUYÚ Technology  - <span>Operador TIc</span></h3>
 			<ul>
-				<li>Operador informático del CIB para un proyecto del BBVA España, monitorización en eventos.</li>
+				<li>Operador informático del CIB para un proyecto del BBVA España, trabajé la monitorización en eventos.</li>
 				<li>Análisis de servidores, bases de datos. Reinicio y balanceo de diferentes aplicativos, recursos y máquinas de producción y desarrollo.</li>
 				<li>Herramientas corporativas tales como BMC Proactive, Control-M, Autenticación de token, Gestor centralizado de incidencias (GSAI), administración de tareas (JIRA).</li>
 				<li>Tratamiento sobre bases de datos en servidores Windows (VMWare) y Linux (PuTTy).</li>
@@ -154,17 +154,17 @@
 	<!--Seccion 4 -->
 	
 	<section class = "skills" id = "skills">
-		<h2 class = "heading">Mis <span>habilidades</span></h2>
+		<h2 class = "heading">Mis <span>Habilidades</span></h2>
 		
 		<div class = "skills-container">
 		
 			<div class ="skills-box">
 				<i class='bx bxs-data' ></i>
 				<h3>Bases de Datos</h3>
-				<p>Facilito el procesamiento de las bases de datos al permitir realizar consultas complejas que extraigan, filtren y agreguen información de forma eficiente. Opero con la normalización, la eliminación de valores atípicos y con 
-					la transformación de variables, beneficiando las estructuras que ofrecen los repositorios de datos. Además, a través de herramientas diseñadas realizo la
-					conexión directa e indirecta a las bases de datos, permitiendo <em>pipelines o canalizaciones</em> de datos automatizados que optimizan el flujo de trabajo entre los procesos ETL 
-					y su posterior entrenamiento.</p>
+				<p>Facilito el procesamiento de las bases de datos al permitir realizar consultas complejas que extraigan, filtren y agreguen información de forma eficiente. Opero con la normalización, 
+					la eliminación de valores atípicos y con la transformación de variables, beneficiando las estructuras que ofrecen los repositorios de datos. Además, a través de herramientas diseñadas
+					realizo la conexión directa e indirecta a las bases de datos, permitiendo <em>pipelines o canalizaciones</em> de datos automatizados que optimizan el flujo de trabajo entre los procesos 
+					ETL y su posterior entrenamiento.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 		
@@ -203,19 +203,19 @@
 				<i class='bx bxs-cloud'></i>
 				<h3>Data Cloud</h3>
 				<p>La aplicación de gestiones cloud lo aporto de conocimientos desde una arquitectura con <em>Azure</em>, pudiendo gestionar suscripciones, controles de acceso, gobernanza y
-				        conectividad con máquinas vurtuales monitorizando tráfico, redes y almacenes. Mis conocimientos con Azure son fundamentales
-					para soportar arquitecturas e infraestructuras en almacenes al soportar bases esenciales como Arquitecto de bases de datos. 
-					La modularidad de arquitecturas de bases de datos con Azure se fundamentan bajo conocimientos sólidos, prácticos, bajo licensias y puestos en desarrollo.</p>
+				        conectividad con máquinas virtuales monitorizando tráfico, redes y almacenes. Mis conocimientos con Azure son fundamentales para soportar arquitecturas e infraestructuras 
+					en almacenes al soportar bases esenciales como Arquitecto de bases de datos. La modularidad de arquitecturas de bases de datos con Azure los fundamento bajo conocimientos 
+					sólidos, prácticos, bajo licensias y puestos en desarrollo.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 			
 			<div class ="skills-box">
 				<i class='bx bxs-bar-chart-alt-2'></i>
 				<h3>Business Intelligence</h3>
-				<p>La creación de visualizaciones y análisis las realizo a través de expresiones de los datoflow o flujos de datos y los soporto con herramientas de inteligencia 
+				<p>La creación de visualizaciones y análisis las realizo a través de expresiones de los dataflow o flujos de datos y los soporto con herramientas de inteligencia 
 					de negocios. Partiicipo en análisis complejos con DAX y sus funciones categóricas para medidas y columnas calculadas. El flujo de datos de esta herramienta 
 					gráfica, con el almacén lo gestiono con <b>DirectQuery</b> a través de conexión de importaciones robustas por lotes. La creación de estas conexiones con la arquitectura 
-					de <em>Business Intelligence</em> y <b>PowerBI</b> me van a permitir crear las dependencias para el tipo de análisis, sincronozación y orquestación de las fuentes.</p>
+					de <em>Business Intelligence</em> y <b>PowerBI</b> me van a permitir crear las dependencias para el tipo de análisis, su sincronozación y orquestación desde las fuentes.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 		</div>
