--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 			<p>Hola, trabajo desde hace muchos años con datos. Mi objetivo es aportar resultados en el menor tiempo posible,
 			poseo conocimientos y habilidades informáticas, pero si no lo se, te aseguro que lo voy averiguar. Mi metodología es simple, 
 			pero muy sólida partiendo desde como trabajar hojas de cálculo con MS Excel, usando análisis funcional para crear tablas y gráficos dinámicos, 
-			para obtener datos complejos. Cada proceso y skillset son únicos, específicos y van a depender de cada responsable. 
-			Trabajo desde hace años con herramientas informáticas dedicadas, como: Excel, Queries de bases de datos con SQL, configuro y 
-			trabajo con lenguajes de alto rendimiento como Python, Scala o R y herramientas colaborativas. Y ya por último si te inclinas más con visualizaciones 
+			hasta obtener datos complejos. Cada proceso y skillset son únicos, específicos y van a depender de cada responsable. 
+			Trabajo desde hace años con herramientas informáticas dedicadas, como: hojas de cálculo, Queries de bases de datos con SQL, configuro y 
+			trabajo con lenguajes de alto rendimiento como Python, Scala o R y sus herramientas colaborativas. Y adicional a todo esto, si te inclinas más con visualizaciones 
 			mi herramienta es PowerBI donde trabajo con dashboards para mostrar gráficos y tendencias.</p>  
 			<!--<a href = "#" class = "btn">Leer Más</a>-->
 		</div>
@@ -92,13 +92,13 @@
 				<li>Análisis y modelamiento con: Pandas, NumPy, Matplotlib, Scikit-Learn, Seaborn, SciPy, Keras o TensorFlow.</li>
 				<li>Gestiones de exploración, recopilación, transformación, filtrado y limpieza.</li>
 				<li>Bases de datos usadas: libros estructurados, archivos planos, formatos AVRO, Parquet, JSON.</li>
-				<li>Conexión HDFS con Apache Hadoop y MapReduce.</li>
-				<li>Conocimientos esenciales de desarrollo con SCALA.</li>
+				<li>Conexión HDFS con <em>Apache Hadoop y MapReduce</em>.</li>
+				<li>Conocimientos esenciales de desarrollo con <b>SCALA.</b></li>
 			</ul>
 			<br>
 			<h3>2019 – 2020 Grupo Tragsa S.A – Empresa Estatal - <span>Operador TIc</span></h3>
 			<ul>
-				<li>Operador informático del Sistema Automático de Información Hidrológica (SAIH), para un proyecto de la Confederación Hidrológica del Tajo.</li>
+				<li>Operador informático del <em>Sistema Automático de Información Hidrológica (SAIH)</em>, para un proyecto de la Confederación Hidrológica del Tajo.</li>
 				<li>Análisis y monitorización de incidencias en los puntos críticos de control de la cuenca.</li>
 				<li>Carga de datos en las campañas de los embalses y aforos de la cuenca.</li>
 				<li>Administración sobre niveles de los caudales en los puntos de control.</li>
