--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
 				<h3>Data Cloud</h3>
 				<p>La aplicación de gestiones cloud lo aporto de conocimientos desde una arquitectura con <em>Azure</em>, pudiendo gestionar suscripciones, controles de acceso, gobernanza y
 				        conectividad con máquinas virtuales monitorizando tráfico, redes y almacenes. Mis conocimientos con Azure son fundamentales para soportar arquitecturas e infraestructuras 
-					en almacenes al soportar bases esenciales como Arquitecto de bases de datos. La modularidad de arquitecturas de bases de datos con Azure los fundamento bajo conocimientos 
-					sólidos, prácticos, bajo licensias y puestos en desarrollo.</p>
+					en almacenes, al estar cubierta por las bases esenciales de un <b>Arquitecto de Bases de Datos</b>. La modularidad de arquitecturas de bases de datos con Azure los fundamento 
+					bajo conocimientos sólidos, prácticos y con licensias para ser desplejados en desarrollo.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 			
