--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
 				<i class='bx bxl-codepen'></i>
 				<h3>Deep Learning</h3>
 				<p>Utlizo como herramienta el lenguaje natural o <b>NPL</b> para elaborar prototipos que puedan ser sacados a producción. Para
-					las tareas de preparación de datos me apoyo con librerías como <b>Pandas y NumPy</b> y para el preprocesamiento trabajo con
-					la librería NLTK en Python. El framework que utilizo para dichas tareas son <b>Tensorflow y su API Keras</b>. Para garantizar patrones realizo la
+					las tareas de preparación de datos me apoyo con librerías como <b>Pandas y NumPy</b> y para el preprocesamiento va a depender 
+					de lo que se necesite analizar ya sea procesadores de textos o imágenes. El framework que utilizo para dichas tareas son <b>Tensorflow y su API Keras</b>. Para garantizar patrones realizo la
 					validación cruzada y división en datos de prueba y entrenamiento, practicando la monitorización, a través de <b>curvas ROC, MSE o error 
 					cuadrático medio, matrices de confusión y precisión</b>, siempre y cuando el problema así lo solicite.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
