--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 			PowerBI.</p>
 			<!--Medios sociales-->
 			<div class = "social-media">
-				<a href = "https://www.linkedin.com/in/reduardoj/" title = "LinkedIn"><i class='bx bxl-linkedin' ></i></a>
-				<a href = "https://www.instagram.com/reduardoj/?hl=es" title = "Instagram"><i class='bx bxl-instagram-alt' ></i></a>
-				<a href = "https://github.com/Edriv-DS" title = "GitHub"><i class='bx bxl-github' ></i></a>
-				<a href = "https://www.twitter.com/EduardoR1105" title = "X"><i class='bx bxl-twitter'></i></i></a>
+				<a href = "https://www.linkedin.com/in/reduardoj/" title = "LinkedIn"><img width="22px" src="https://github.com/user-attachments/assets/e85d5713-88ba-49d9-9be3-6d744fb72a4f" /></a>
+				<a href = "https://www.instagram.com/reduardoj/?hl=es" title = "Instagram"><img width="22px" src="https://github.com/user-attachments/assets/63b4d7ea-1b25-4e53-a25e-04ac01a5341f" /></a>
+				<a href = "https://github.com/Edriv-DS" title = "GitHub"><img width="22px" src="https://github.com/user-attachments/assets/e2305945-4a24-47d9-af8c-4991769ab30b" /></a>
+				<a href = "https://www.twitter.com/EduardoR1105" title = "X"><img width="17.6px" src="https://github.com/user-attachments/assets/4191e6f2-ba8c-4dd0-b000-0dbd14586749" /></a>
 				<!--<a href = "https://www.twitter.com/EduardoR1105" title = "X"><img src = "images/x.png"></a>-->
 			</div>
 			<!--<a href = "#" class = "btn">Descarga CV</a> puede ser un botón de descarga--> 
